fixed overflow-x problem on attorney profiles without affecting homepage parallax.
removed Pat Donahue

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -3,9 +3,8 @@
 html,body{
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 body {
